<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/id_create_pet"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:text="@string/create_pet" />

        <Button
            android:id="@+id/id_create_person"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:text="@string/create_person" />

        <Button
            android:id="@+id/id_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view" />
    </LinearLayout>
</RelativeLayout>
