<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rogmax.amirjaber.taskrogmax2.CreatePet">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_type"/>

    <Spinner
        android:id="@+id/id_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop = "true"/>


    <Spinner
        android:id="@+id/id_spinner1"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_petName"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pet_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/b_addPet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_pet" />

</LinearLayout>
